--- a/sample/index.html
+++ b/sample/index.html
@@ -25,12 +25,19 @@
 
 	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>
 </div>
+<p>Word Count: <span id="word-count"></span></p>
 
 <script src="../build/ckeditor.js"></script>
 <script>
 	ClassicEditor.create( document.querySelector( '#editor' ) )
 		.then( editor => {
 			window.editor = editor;
+			const wordCountPlugin = editor.plugins.get( 'WordCount' );
+
+			wordCountPlugin.on( 'update', ( evt, data ) => {
+					// data is an object with "words" and "characters" field
+					document.getElementById("word-count").innerHTML = data.words
+			} );
 		} )
 		.catch( err => {
 			console.error( err.stack );
